# midi_controller

./: .gitignore  README.md  boot_out.txt  code.py  install.sh  ref.txt
firmware/: boot.py  buttons.py  main.py  settings.toml.example  splash.py
linux_app/: README.md  config.py  constants.py  install.sh  main.py  midi_worker.py  pyproject.toml  requirements.txt
linux_app/midivol/: __init__.py  __main__.py  audio_controller.py  config.py  constants.py  main.py  midi_worker.py
linux_app/midivol/ui/: main_window.py  tray_icon.py  update_dialog.py
linux_app/ui/: app_selector.py  main_window.py  pot_column.py  tray_icon.py
